# math

./: .gitignore  README.md  pyproject.toml
complex-analysis/: complex-analysis.bib  complex-analysis.typ
complex-analysis/notebooks/: curve_plot.jl  line_segment_plot.jl
complex-analysis/notebooks/cauchy-theorem-and-its-application/: cauchy-integral-formulas.ipynb  goursat-theorem.ipynb  local-existence-of-primitives-and-cauchy-theorem-in-a-disk.ipynb
complex-analysis/notebooks/preliminaries-to-complex-analysis/: contour-integration.ipynb  holomorphic-functions.ipynb  smooth-curves.ipynb  topology-of-the-complex-plane.ipynb  topology-on-the-complex-plane.ipynb
linear-algebra/: linear-algebra.typ
mathematical-analysis/: mathematical-analysis.typ
mplstyles/: math.mplstyle
