[tool.poetry]
name = "mathematics"
version = "0.1.0"
description = "Mathematics notebooks."
authors = ["isaac-fei <isaac.omega.fei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
typing-extensions = "^4.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
